# Quantum-Resource-Estimator

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
docs/: Makefile  make.bat  requirements.txt
docs/source/: conf.py  index.rst
docs/source/api/: algorithms.rst  core.rst  dsl.rst  index.rst  primitives.rst  quantikz.rst
docs/source/cli/: index.rst
notebooks/: convective_flux_jacobian.py  test_CKS.py  test_QDA.py  test_lf_riemannsolver.py  test_quantikz_render.py
pyqres/: __init__.py  cli.py
pyqres/algorithms/: __init__.py  amplitude_amplification.py  block_encoding.py  cks_solver.py  grover.py  linear_solver.py  qda_solver.py  shor.py  state_prep.py  tomography.py
pyqres/core/: __init__.py  lowering.py  metadata.py  operation.py  primitive_registry.py  registry.py  simulator.py  utils.py  visitor.py
pyqres/dsl/: __init__.py  checker.py  codegen.py  compiler.py  schema.py
pyqres/lib/: __init__.py
pyqres/primitives/: __init__.py  _utils.py  arithmetic.py  cond_rot.py  debug.py  gates.py  measurement.py  qram.py  register_ops.py  state_prep.py  transform.py
pyqres/quantikz/: __init__.py  generator.py  visitor.py
pyqres/utils/: __init__.py  qram_utils.py
tests/: conftest.py  test_algorithms_e2e.py  test_block_encoding.py  test_cli.py  test_dsl.py  test_grover.py  test_lowering.py  test_primitives.py  test_quantikz.py  test_resource_estimation.py  test_shor.py  test_simulation.py  test_state_prep.py  test_visitor.py
(+43 files in other folders)
